--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
-# this file uses prebuilt image in dockerhub
+version: '3.8'
+
 services:
   jekyll:
-    image: amirpourmand/al-folio:v0.12.1
     build: .
-    # uncomment these if you are having this issue with the build:
-    # /usr/local/bundle/gems/jekyll-4.3.4/lib/jekyll/site.rb:509:in `initialize': Permission denied @ rb_sysopen - /srv/jekyll/.jekyll-cache/.gitignore (Errno::EACCES)
-    # and fill the args values with the output of the commands on the right
-    # build:
-    #   args:
-    #     GROUPID: # id -g
-    #     GROUPNAME: # id -gn
-    #     USERID: # id -u
-    #     USERNAME: # echo $USER
+    image: amirpourmand/al-folio:v0.12.1
     ports:
-      - 8080:8080
-      - 35729:35729
+      - "8080:8080"   # Host:Container
+      - "35729:35729"
     volumes:
-      - .:/srv/jekyll
+      - .:/srv/jekyll:cached
     environment:
       - JEKYLL_ENV=development
+    restart: unless-stopped
