--- a/_config.yml
+++ b/_config.yml
@@ -279,7 +279,7 @@ defaults:
   - scope:
       path: "assets"
     values:
-      sitemap: false
+      sitemap: true
 
 sass:
   style: compressed
